== 9/Jun/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b52.zip V1.6b52]  ==

''' Groovy Models'''

Added a hook to send initialisation commands to a device every time it connects

elife.doStartup (ReturnWrapper returnWrapper)

See the demonstration groovy model, BI_Tuner, for usage.

Significant enhancements were made to the BI_Tuner groovy model


== 3/Jun/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b51.zip V1.6b51]  ==

''' Groovy '''

Added a command to attempt to determine the current volume for an AV device.   elife.getVolume (audio_zone_name)   
either the current volume or "unknown" will be returned.
Resolves ticket [ticket:632]

Added access to sending IR commands for scripts.  Resolves ticket [ticket:608]
elife.sendIR ("Device Name of GC100 IR output",  "key from IR code database")   
elife.sendIR ("Device Name of GC100 IR output",  "key from IR code database","number of repeats")   

For example

elife.sendIR ("STUDY_IR","Philips MC-200.VOLUP")

					
== 28/May/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b50.zip V1.6b50]  ==

''' Groovy '''

Added a command to attempt to determine the current source for an AV device.   elife.getSource (audio_zone_name)   
either the name or "unknown" will be returned.

== 27/May/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b49.zip V1.6b49]  ==

''' Groovy '''

Provided a hook for scripts to do activity when they are first started. The method registerScript () will be called. Resolves ticket [ticket:630]
See [ServerDocs/GroovyScript] for details

Added the elife.isOn  and elife.isOff  methods to groovy scripts. The call requires the item you are querying to be passed as a parameter.
    eg. elife.isOn ("SHOWROOM_AUDIO") will return true if it is currently on.

''' Patterns '''
Added a concept of integrator patterns to represent standard things integrators would otherwise put into script
The first pattern is for on / off volume control.
