@@ -1,4 +1,4 @@
-#Sat Jun 09 16:49:31 EST 2007
+#Sun Jun 10 08:08:41 EST 2007
 major_version=1.6b
-minor_version=53
+minor_version=54
 app_name=eLife
